2003-01-13  Marian Eichholz <eichholz@computer.org>
	* the very beginning
