@@ -1,3 +1,7 @@
+New on 2004-04-10
+	* Begin rewrite in C: "Write in C, write in C ..."
+	* removed menus.* and resource compiling
+
 New on 2003-11-26
 	* autoconf compliant (erm.. not really portable maybe)
 
