@@ -1,3 +1,6 @@
+2004-04-10  Marian Eichholz <eichholz@computer.org>
+	* main.cc / app.cc : changed to "C" style
+
 2003-01-13  Marian Eichholz <eichholz@computer.org>
 	* the very beginning
 
